lib_LTLIBRARIES = libSaClm.la

libSaClm_la_SOURCES  = 

libSaClm_la_CPPFLAGS =  @NCS_CORE_CPP_DEFINES@ -DNCS_CLA=1 -DNCS_AVSV_LOG=1
libSaClm_la_LIBADD   =	$(top_srcdir)/lib/lib_ncs_core/libncs_core.la \
			$(top_srcdir)/services/avsv/common/libavsv_common.la \
			$(top_srcdir)/services/avsv/cla/libcla.la
