lib_LTLIBRARIES = libSaMsg.la

libSaMsg_la_SOURCES  = 
libSaMsg_la_CPPFLAGS =  @NCS_CORE_CPP_DEFINES@ 
libSaMsg_la_LIBADD   =	$(top_srcdir)/lib/lib_ncs_core/libncs_core.la \
			$(top_srcdir)/services/mqsv/common/libmqsv_common.la \
			$(top_srcdir)/services/mqsv/mqa/libmqa.la \
			$(top_srcdir)/services/common/libsaf_common.la
